0.5.2
 - Added Uni UI. Consider the others depreciated.
 - Added Play and enqueue music genre.
 - Added Artist info and enqueue all.
 - Added Start Page. Defaults to Recent TV.
 - Added Better playlist identification and labelling.
 - Added Currently playing stream info in footer (Uni UI only).
 - Fixed Playlists containing streams and not local files.
 - Fixed Youtube trailer link.
 - Changed Logo walls now support lazyload.
 - Changed Movie Set sorts by label.
 - Changed Action menus (play, enqueue etc.) can be activated on hover or click.
 - Update Lazyload to 1.7.2.

0.5.1
 - Added Artists views
 - Added Logo wall for artists and TV show. Does not support lazyload!
 - Added Play movies via Cinema Experience addon.
 - Added Chinese translation by Taxigps.
 - Added Albums inline list view.
 - Added Episodes thumbnail view.
 - Added Movies single poster view.
 - Added Trailer link and play via XBMC.
 - Changed Only warn about reloading when changing UIs.
 - Changed Default timeout to 20 seconds.
 
0.5.0
 - Added Sorting.
 - Added Movie Sets.
 - Added Views (more to come).
 - Added Automatically close when XBMC is unreachable.
 - Changed Playlists info is clearer. 
 - Fixed Find with views.

0.4.8
 - Added Movie views!
 - Added Song play next.
 - Changed Moved most views and UI function to ui.views.js to allow for easier view additions.
 - Changed periodicUpdater is all async.
 - Fixed Scan music scans music and not video!

0.4.7
 - Skipped due to repo problem.
 
0.4.6:
 - Added Select sort order for movies.
 - Added TV episode tagging.
 - Added Video playlists.
 - Added Hide watched mark.
 - Added/Changed Library tools: scan, clean and export.
 - Added Refresh playlist.
 - Added Find to music playlist.
 - Added IMDB to movie info.
 - Fixed Genres find.
 - Changed Fan art overflows in currently playing.
 - Changed Name to AWXi for official repo.

0.4.5:
 - Added Use fan art as background.
 - Added HTTP link to files.
 - Added Click speaker icon to mute/unmute.